TGUI 0.8.6  (TBD)
-----------------

- Added support for text outline in Label and Button widgets
- Added SelectionChanged signal to TextBox
- Added getSelectionStart and getSelectionEnd functions to TextBox
- Added mousePressed and mouseReleased to respond to different mouse buttons in custom widgets
- Added focusable property to widgets
- Added TextureBackground property to Label, Panel and ChildWindow renderers
- Added VerticalScrollAmount and HorizontalScrollAmount to ScrollablePanel
- Added functions to set and get scrollbar values in widgets that have a scrollbar
- Added function to Slider to disallow changing the value by scrolling the mouse wheel (#104)
- Added right mouse clicked signals to ClickableWidget (base class for several widgets) and Panel
- Added HeaderClicked signal to ListView
- SignalItem (used by ListBox and ComboBox) can now have the item index as optional parameter
- Container widgets didn't pass right click event to child widgets
- Widget state was incorrect when starting a show/hide animation while another was still busy
- Disabling tabs widget caused selected tab to be deselected
- Vertical alignment in Label didn't work correctly when there was a scrollbar
- Knob never responded to mouse events on places where the background texture was transparent
- Text color wasn't updated in MenuBar when disabling and re-enabling widget
- Unicode text wasn't properly handled when loading/saving widgets from/to a widget file
- Fixed potential crash when creating a ProgressBar
- ListView clipped content in expanded column


TGUI 0.8.5  (6 April 2019)
--------------------------

- Big improvements to Gui Builder
- Svg images are now supported
- ComboBox can now contain some text when no item is selected
- Added function to ComboBox to disallow changing the selected item by scrolling the mouse wheel
- Added RightClicked signal to ListView
- Added functions to ListView to change existing items