@@ -52,6 +52,166 @@ namespace tgui
         extern TGUI_API std::deque<const void*> parameters;
     }
 
+    /// @brief Lists the names of all signals for all widgets
+    namespace Signals
+    {
+        struct Widget
+        {
+            static constexpr const char* const PositionChanged = "PositionChanged";     ///< The position of the widget changed. Optional parameter: new position
+            static constexpr const char* const SizeChanged = "SizeChanged";             ///< The size of the widget changed. Optional parameter: new size
+            static constexpr const char* const Focused = "Focused";                     ///< The widget was focused
+            static constexpr const char* const Unfocused = "Unfocused";                 ///< The widget was unfocused
+            static constexpr const char* const MouseEntered = "MouseEntered";           ///< The mouse entered the widget
+            static constexpr const char* const MouseLeft = "MouseLeft";                 ///< The mouse left the widget
+            static constexpr const char* const AnimationFinished = "AnimationFinished"; ///< A show or hide animation finished. Optional parameters: animation type, new widget visibility or both
+        };
+
+        struct ClickableWidget : public Widget
+        {
+            static constexpr const char* const MousePressed = "MousePressed";               ///< The mouse went down on the widget. Optional parameter: mouse position relative to widget
+            static constexpr const char* const MouseReleased = "MouseReleased";             ///< The mouse was released on top of the widget. Optional parameter: mouse position relative to widget
+            static constexpr const char* const Clicked = "Clicked";                         ///< The widget was clicked. Optional parameter: mouse position relative to widget
+            static constexpr const char* const RightMousePressed = "RightMousePressed";     ///< The right mouse button went down on the widget. Optional parameter: mouse position relative to widget
+            static constexpr const char* const RightMouseReleased = "RightMouseReleased";   ///< The right mouse button was released on top of the widget. Optional parameter: mouse position relative to widget
+            static constexpr const char* const RightClicked = "RightClicked";               ///< The widget was right clicked. Optional parameter: mouse position relative to widget
+        };
+
+        struct Button : public ClickableWidget
+        {
+            static constexpr const char* const Pressed = "Pressed"; ///< The button was pressed. Optional parameter: text of the button
+        };
+
+        struct ChildWindow : public Widget
+        {
+            static constexpr const char* const MousePressed = "MousePressed";           ///< The mouse went down on the widget
+            static constexpr const char* const Closed = "Closed";                       ///< The window was closed. Optional parameter: pointer to the window
+            static constexpr const char* const Minimized = "Minimized";                 ///< The window was minimized. Optional parameter: pointer to the window
+            static constexpr const char* const Maximized = "Maximized";                 ///< The window was maximized. Optional parameter: pointer to the window
+            static constexpr const char* const EscapeKeyPressed = "EscapeKeyPressed";   ///< The escape key was pressed while the child window was focused. Optional parameter: pointer to the window
+        };
+
+        struct ComboBox : public Widget
+        {
+            static constexpr const char* const ItemSelected = "ItemSelected";   ///< An item was selected in the combo box. Optional parameter: selected item or its index
+        };
+
+        struct EditBox : public ClickableWidget
+        {
+            static constexpr const char* const TextChanged = "TextChanged";             ///< The text was changed. Optional parameter: new text
+            static constexpr const char* const ReturnKeyPressed = "ReturnKeyPressed";   ///< The return key was pressed. Optional parameter: text in the edit box
+        };
+
+        struct Knob : public Widget
+        {
+            static constexpr const char* const ValueChanged = "ValueChanged";   ///< The value of the know changed. Optional parameter: new value
+        };
+
+        struct Label : public ClickableWidget
+        {
+            static constexpr const char* const DoubleClicked = "DoubleClicked"; ///< The label was double clicked. Optional parameter: text of the label
+        };
+
+        struct ListBox : public Widget
+        {
+            static constexpr const char* const ItemSelected = "ItemSelected";   ///< An item was selected in the list box. Optional parameter: selected item or its index
+            static constexpr const char* const MousePressed = "MousePressed";   ///< The mouse went down on an item. Optional parameter: selected item or its index
+            static constexpr const char* const MouseReleased = "MouseReleased"; ///< The mouse was released on one of the items. Optional parameter: selected item or its index
+            static constexpr const char* const DoubleClicked = "DoubleClicked"; ///< An item was double clicked. Optional parameter: selected item or its index
+        };
+
+        struct ListView : public Widget
+        {
+            static constexpr const char* const ItemSelected = "ItemSelected";   ///< An item was selected in the list view. Optional parameter: selected item index (-1 when deselecting)
+            static constexpr const char* const DoubleClicked = "DoubleClicked"; ///< An item was double clicked. Optional parameter: selected item index
+            static constexpr const char* const RightClicked = "RightClicked";   ///< Right mouse clicked. Optional parameter: index of item below mouse (-1 when not on top of item)
+            static constexpr const char* const HeaderClicked = "HeaderClicked"; ///< The header was clicked. Optional parameter: column index
+        };
+
+        struct MenuBar : public Widget
+        {
+            /// One of the menu items was clicked.
+            /// Optional parameters:
+            ///     - The text of the clicked menu item
+            ///     - List containing both the name of the menu and the menu item that was clicked
+            static constexpr const char* const MenuItemClicked = "MenuItemClicked";
+        };
+
+        struct MessageBox : public ChildWindow
+        {
+            static constexpr const char* const ButtonPressed = "ButtonPressed"; ///< One of the buttons was pressed. Optional parameter: text of the pressed button
+        };
+
+        struct Panel : public Widget
+        {
+            static constexpr const char* const MousePressed = "MousePressed";               ///< The mouse went down on the panel. Optional parameter: mouse position relative to panel
+            static constexpr const char* const MouseReleased = "MouseReleased";             ///< The mouse was released on top of the panel. Optional parameter: mouse position relative to panel
+            static constexpr const char* const Clicked = "Clicked";                         ///< The panel was clicked. Optional parameter: mouse position relative to panel
+            static constexpr const char* const RightMousePressed = "RightMousePressed";     ///< The right mouse button went down on the panel. Optional parameter: mouse position relative to panel
+            static constexpr const char* const RightMouseReleased = "RightMouseReleased";   ///< The right mouse button was released on top of the panel. Optional parameter: mouse position relative to panel
+            static constexpr const char* const RightClicked = "RightClicked";               ///< The panel was right clicked. Optional parameter: mouse position relative to panel
+        };
+
+        struct Picture : public ClickableWidget
+        {
+            static constexpr const char* const DoubleClicked = "DoubleClicked"; ///< The picture was double clicked. Optional parameter: mouse position relative to picture
+        };
+
+        struct ProgressBar : public ClickableWidget
+        {
+            static constexpr const char* const ValueChanged = "ValueChanged";   ///< Value of the progress bar changed. Optional parameter: new value
+            static constexpr const char* const Full = "Full";                   ///< Value of the progress bar changed and he progress bar became full
+        };
+
+        struct RadioButton : public ClickableWidget
+        {
+            static constexpr const char* const Checked = "Checked";     ///< Radio button was checked. Optional parameter: bool which is always true
+            static constexpr const char* const Unchecked = "Unchecked"; ///< Radio button was unchecked. Optional parameter: bool which is always false
+            static constexpr const char* const Changed = "Changed";     ///< Radio button was checked or unchecked. Optional parameter: bool indicating whether it is checked
+        };
+
+        struct RangeSlider : public Widget
+        {
+            static constexpr const char* const RangeChanged = "RangeChanged";   ///< Value of the slider changed. Optional parameter: new value
+        };
+
+        struct Scrollbar : public Widget
+        {
+            static constexpr const char* const ValueChanged = "ValueChanged";   ///< Value of the scrollbar changed. Optional parameter: new value
+        };
+
+        struct Slider : public Widget
+        {
+            static constexpr const char* const ValueChanged = "ValueChanged";   ///< Value of the slider changed. Optional parameter: new value
+        };
+
+        struct SpinButton : public ClickableWidget
+        {
+            static constexpr const char* const ValueChanged = "ValueChanged";   ///< Value of the spin button changed. Optional parameter: new value
+        };
+
+        struct Tabs : public Widget
+        {
+            static constexpr const char* const TabSelected = "TabSelected";   ///< A tab that was selected. Optional parameter: selected item
+        };
+
+        struct TextBox : public Widget
+        {
+            static constexpr const char* const TextChanged = "TextChanged";             ///< The text was changed. Optional parameter: new text
+            static constexpr const char* const SelectionChanged = "SelectionChanged";   ///< Selected text changed
+        };
+
+        struct TreeView : public Widget
+        {
+            static constexpr const char* const ItemSelected = "ItemSelected";   ///< An node was selected in the tree view. Optional parameter: selected node
+            static constexpr const char* const DoubleClicked = "DoubleClicked"; ///< A leaf node was double clicked. Optional parameter: selected node
+            static constexpr const char* const Expanded = "Expanded";           ///< A branch node was expanded in the tree view. Optional parameter: expanded node
+            static constexpr const char* const Collapsed = "Collapsed";         ///< A branch node was collapsed in the tree view. Optional parameter: collapsed node
+        };
+
+        using BitmapButton = Button;
+        using CheckBox = RadioButton;
+        using ScrollablePanel = Panel;
+    }
 
     /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
     /// @brief Signal to which the user can subscribe to get callbacks from
