@@ -265,7 +265,7 @@ namespace tgui
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
     public:
 
-        SignalFloat onValueChange = {"ValueChanged"}; ///< Value of the scrollbar changed. Optional parameter: new value
+        SignalFloat onValueChange = {"ValueChanged"}; ///< Value of the spin button changed. Optional parameter: new value
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
