@@ -482,7 +482,7 @@ namespace tgui
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
     public:
 
-        SignalString onTabSelect = {"TabSelected"}; ///< An item was selected in the list box. Optional parameter: selected item
+        SignalString onTabSelect = {"TabSelected"}; ///< A tab that was selected. Optional parameter: selected item
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
