@@ -1,6 +1,8 @@
 TGUI 0.8.6  (TBD)
 -----------------
 
+- Added sort function to ListView to sort data based on values in a chosen column ([PR #107](https://github.com/texus/TGUI/pull/107))
+- Added function to Slider to disallow changing the value by scrolling the mouse wheel ([PR #104](https://github.com/texus/TGUI/pull/104))
 - Added support for text outline in Label and Button widgets
 - Added SelectionChanged signal to TextBox
 - Added getSelectionStart and getSelectionEnd functions to TextBox
@@ -9,9 +11,9 @@ TGUI 0.8.6  (TBD)
 - Added TextureBackground property to Label, Panel and ChildWindow renderers
 - Added VerticalScrollAmount and HorizontalScrollAmount to ScrollablePanel
 - Added functions to set and get scrollbar values in widgets that have a scrollbar
-- Added function to Slider to disallow changing the value by scrolling the mouse wheel (#104)
 - Added right mouse clicked signals to ClickableWidget (base class for several widgets) and Panel
 - Added HeaderClicked signal to ListView
+- Addded Signals namespace with strings for signals of all widgets
 - SignalItem (used by ListBox and ComboBox) can now have the item index as optional parameter
 - Container widgets didn't pass right click event to child widgets
 - Widget state was incorrect when starting a show/hide animation while another was still busy
